# bk300-web-bluetooth-monitor

./: .gitignore  README.md  btsnoop_hci.log.last
docs/: spec.md
esp32/: README.md  bk300_oneshot_sleep.ino
esp32-idf-oled/bk300_monitor/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
esp32-idf-oled/bk300_monitor/main/: CMakeLists.txt  Kconfig.projbuild  bk300_driver.c  bk300_driver.h  bk300_protocol.c  main.c  ntp_sync.c  ntp_sync.h  oled.c  oled.h  oled_font.h
esp32-idf-oled/bk300_monitor/scripts/: PACKAGE_README.md  monitor.bat  monitor.sh
esp32-idf/bk300_monitor/: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig.defaults
esp32-idf/bk300_monitor/main/: CMakeLists.txt  bk300_protocol.h  main.c
esp32-idf/bk300_monitor/scripts/: PACKAGE_README.md  flash.bat  flash.sh
esp32/_legacy_nimble/: bk300_oneshot_sleep.nimble.bak.cpp.txt
esp32/bk300_oled/: README.md  bk300_oled.ino
tools/: analyze_btsnoop.py
web-monitor/: README.md  index.html  tailwind.config.cjs  tsconfig.app.json
web-monitor/src/: App.tsx
web-monitor/src/components/: VoltageChart.tsx
web-monitor/src/components/ui/: badge.tsx  button.tsx  card.tsx
web-monitor/src/hooks/: useBk300.ts
web-monitor/src/lib/: bk300.ts
